--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,8 @@ body {
 .bodyPart-card {
   transform: scale(1, 1);
   transition: 0.3s all ease-in-out;
+  /* margin-left: 10px; */
+  margin-right: -30px;
 }
 
 .exercise-card:hover,
